--- a/app.json
+++ b/app.json
@@ -20,10 +20,17 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.abhiii1010.netflixui"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4a0326a0-6224-419e-9da5-6f61d8ce16fa"
+      }
+    },
+    "owner": "abhiii1010"
   }
 }
